k8s/gulimall-product.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gulimall-product
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gulimall-product
  template:
    metadata:
      labels:
        app: gulimall-product
    spec:
      terminationGracePeriodSeconds: 0
      containers:
      - name: api
#        image: okteto/hello-world:java-maven
        image: gulimall-product
        imagePullPolicy: Always
        ports:
        - containerPort: 8082

---

apiVersion: v1
kind: Service
metadata:
  name: gulimall-product
  annotations:
    dev.okteto.com/auto-ingress: "true"
  labels:
    app: gulimall-product
spec:
  type: ClusterIP
  ports:
    - name: gulimall-product
      port: 8082
  selector:
    app: gulimall-product
