k8s/ingressv1.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gulimall
  annotations:
    dev.okteto.com/generate-host: "true"
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: renren-fast
                port:
                  number: 8080
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: gulimall-gateway
                port:
                  number: 88
